# AIJobs

./: .replit  Pasted-1-Dashboard-Management-Backend-Database-Setup-Create-tables-for-Users-Applications-Interview-Sc-1730021045484.txt  apply_schema_updates.py  initialize_nlp.py  main.py  pyproject.toml  replit.nix  sample_data.sql  sample_interview_questions.sql  sample_job_sources.sql  schema.sql  schema_updates.sql  schema_updates_email.sql  schema_updates_interview.sql  schema_updates_location.sql  schema_updates_optimization.sql  schema_updates_scraping.sql
.streamlit/: config.toml
assets/: style.css
components/: analytics_dashboard.py  email_preferences.py  interview_practice.py  job_search.py  match_visualization.py  resume_upload.py
utils/: advanced_matcher.py  ai_feedback.py  database.py  email_notifier.py  file_handler.py  interview_db.py  job_scraper.py  nlp_processor.py  notification_worker.py  rate_limiter.py  scraping_worker.py  selenium_scraper.py  text_similarity.py  web_scraper.py
