[project]
name = "repl-nix-dashmanagedb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.24.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-magic>=0.4.27",
    "scikit-learn>=1.5.2",
    "sentence-transformers==2.2.2",
    "spacy==3.6.1",
    "streamlit>=1.39.0",
    "trafilatura>=1.12.2",
    "werkzeug>=3.0.6",
]
